--- a/Taskify/docker-compose.yml
+++ b/Taskify/docker-compose.yml
@@ -1,31 +1,20 @@
-version: '3.8'
+version: "3.8"
 services:
   frontend:
-    build: ./
+    build: ./frontend
     ports:
-      - '3000:3000'
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
+      - "3000:3000"
     depends_on:
       - backend
 
   backend:
     build: ./backend
     ports:
-      - '5000:5000'
-    volumes:
-      - ./backend:/app
-      - /app/node_modules
-    environment:
-      - DB_URI=mongodb://mongo:27017/taskify
+      - "5000:5000"
+    depends_on:
+      - mongo
 
   mongo:
     image: mongo
     ports:
       - "27017:27017"
-    volumes:
-      - mongo_data:/data/db
-
-volumes:
-  mongo_data:
